Restructure into multi-module build (core, postgres, circe, tests)